--- a/index.html
+++ b/index.html
@@ -402,17 +402,15 @@
                 </ul>
             </div>
             <div>
-                <h2 class="footer-headline">Подпишитесь на рассылку</h2>
+                <p class="footer-headline"> <strong>Подпишитесь на рассылку</strong> </p>
                 <form class="form-online">
-                    <input class="online-input" type="user-mail" name="user-mail" placeholder="E-mail">
-                    
+                    <input class="online-input" type="email" name="user-mail" id="user-mail" placeholder="E-mail">
                     <button type="submit" class="hero-button online-btn">
                         Подписаться
                         <svg class="online-btn-icon">
                             <use href="./images/sprite.svg#icon-send"></use>
                         </svg>
                     </button>
-        
                 </form>
             </div>    
         </div>
@@ -424,8 +422,8 @@
                 <svg class="close-btn-icon"> <use href="./images/sprite.svg#icon-close"></use> </svg>
             </button>
             <!-- form -->
-            <p class="modal-title">Оставьте свои данные, мы вам перезвоним</p>
-            <form class="modal-form js-speaker-form">
+            <form class="modal-form">
+                <p class="modal-title">Оставьте свои данные, мы вам перезвоним</p>
                 <div class="modal-field">
                     <label for="name">Имя</label>
                     <input class="modal-input" 
@@ -434,7 +432,7 @@
                     id="name" 
                     placeholder="name">
                     <svg class="modal-icon">
-                        <use href="./images/sprite.svg#icon-name"></use>
+                        <use href="./images/sprite.svg#icon-person"></use>
                     </svg>
                 </div>
                 <div class="modal-field">
@@ -445,7 +443,7 @@
                     id="tel" 
                     placeholder="+380........">
                     <svg class="modal-icon">
-                        <use href="./images/sprite.svg#icon-tel"></use>
+                        <use href="./images/sprite.svg#icon-phone"></use>
                     </svg>
                 </div>
                 <div class="modal-field">
@@ -456,7 +454,7 @@
                     id="mail"
                     placeholder="email">
                     <svg class="modal-icon">
-                        <use href="./images/sprite.svg#icon-mail"></use>
+                        <use href="./images/sprite.svg#icon-envelope"></use>
                     </svg>
                 </div>
                 <div class="modal-comment">
