--- a/portfolio.html
+++ b/portfolio.html
@@ -191,9 +191,9 @@
     <!--Підвал-->
     <footer class="footer">
         <div class="container footer-container">
-            <div>
+            <div class="footer-address">
                 <p class="logo">Web<span class="text">Studio</span></p>
-                <address class="address">
+                <address>
                     <ul class="address-auth-nav">
                         <li class="address-row"> 
                             <a class="link maps" href="https://www.google.com.ua/maps/place/%D0%B1%D1%83%D0%BB%D1%8C%D0%B2%D0%B0%D1%80+%D0%9B%D0%B5%D1%81%D1%96+%D0%A3%D0%BA%D1%80%D0%B0%D1%97%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D1%97%D0%B2,+02000/@50.4268936,30.5373685,18z"> г. Киев, пр-т Леси Украинки, 26 </a> </li>
@@ -237,6 +237,18 @@
                         </a>
                     </li>
                 </ul>
+            </div>
+            <div>
+                <p class="footer-headline"> <strong>Подпишитесь на рассылку</strong> </p>
+                <form class="form-online">
+                    <input class="online-input" type="email" name="user-mail" id="user-mail" placeholder="E-mail">
+                    <button type="submit" class="hero-button online-btn">
+                        Подписаться
+                        <svg class="online-btn-icon">
+                            <use href="./images/sprite.svg#icon-send"></use>
+                        </svg>
+                    </button>
+                </form>
             </div>
         </div>
     </footer>
