--- a/index.html
+++ b/index.html
@@ -426,36 +426,40 @@
                 <p class="modal-title">Оставьте свои данные, мы вам перезвоним</p>
                 <div class="modal-field">
                     <label for="name">Имя</label>
-                    <input class="modal-input" 
-                    type="text" 
-                    name="name" 
-                    id="name" 
-                    placeholder="name">
-                    <svg class="modal-icon">
-                        <use href="./images/sprite.svg#icon-person"></use>
-                    </svg>
+                    <span class="input-wrapper">
+                        <input class="modal-input" 
+                        type="text" 
+                        name="name" 
+                        id="name" 
+                        required>
+                        <svg class="modal-icon">
+                            <use href="./images/sprite.svg#icon-person"></use>
+                        </svg>
+                    </span>
                 </div>
                 <div class="modal-field">
                     <label  for="tel">Телефон</label>
-                    <input class="modal-input"
-                    type="tel" 
-                    name="tel" 
-                    id="tel" 
-                    placeholder="+380........">
-                    <svg class="modal-icon">
-                        <use href="./images/sprite.svg#icon-phone"></use>
-                    </svg>
+                    <span class="input-wrapper">
+                        <input class="modal-input" 
+                        type="tel" 
+                        name="tel" 
+                        id="tel">
+                        <svg class="modal-icon">
+                            <use href="./images/sprite.svg#icon-phone"></use>
+                        </svg>
+                    </span>
                 </div>
                 <div class="modal-field">
                     <label for="mail">Почта</label>
-                    <input class="modal-input"
-                    type="email" 
-                    name="mail" 
-                    id="mail"
-                    placeholder="email">
-                    <svg class="modal-icon">
-                        <use href="./images/sprite.svg#icon-envelope"></use>
-                    </svg>
+                    <span class="input-wrapper">
+                        <input class="modal-input" 
+                        type="email" 
+                        name="mail" 
+                        id="mail">
+                        <svg class="modal-icon">
+                            <use href="./images/sprite.svg#icon-envelope"></use>
+                        </svg>
+                    </span>
                 </div>
                 <div class="modal-comment">
                     <label for="comment">Коментарий</label>
@@ -470,7 +474,13 @@
                     name="text" 
                     value="text" 
                     id="text">
-                    <label for="text">Соглашаюсь с рассылкой и принимаю <span class="form-text">Условия договора</span></label>
+                    <label class="label-checkbox" for="text">
+                        <span class="contour-checkbox">
+                            <svg class="check-icon">
+                                <use href="./images/sprite.svg#icon-Vector"></use>
+                            </svg>
+                        </span> 
+                    Соглашаюсь с рассылкой и принимаю <a class="modal-text">Условия договора</a></label>
                 </div>
                 <div class="modal-btn">
                     <button class="hero-button" type="submit">Отправить</button>
