--- a/index.html
+++ b/index.html
@@ -404,7 +404,7 @@
             <div>
                 <p class="footer-headline"> <strong>Подпишитесь на рассылку</strong> </p>
                 <form class="form-online">
-                    <input class="online-input" type="email" name="user-mail" id="user-mail" placeholder="E-mail">
+                    <input class="online-input" type="email" name="user-mail" placeholder="E-mail">
                     <button type="submit" class="hero-button online-btn">
                         Подписаться
                         <svg class="online-btn-icon">
@@ -457,7 +457,7 @@
                         name="mail" 
                         id="mail">
                         <svg class="modal-icon">
-                            <use href="./images/sprite.svg#icon-envelope"></use>
+                            <use href="./images/sprite.svg#icon-envelope-black"></use>
                         </svg>
                     </span>
                 </div>
@@ -469,15 +469,15 @@
                     placeholder="Введите текст"></textarea>
                 </div>
                 <div class="modal-checkbox">
-                    <input class="input-checkbox"
+                    <input class="input-checkbox visual-hidden"
                     type="checkbox" 
                     name="text" 
                     value="text" 
-                    id="text">
+                    id="text"/>
                     <label class="label-checkbox" for="text">
                         <span class="contour-checkbox">
                             <svg class="check-icon">
-                                <use href="./images/sprite.svg#icon-Vector"></use>
+                                <use href="./images/sprite.svg#icon-vector"></use>
                             </svg>
                         </span> 
                     Соглашаюсь с рассылкой и принимаю <a class="modal-text">Условия договора</a></label>
