--- a/index.html
+++ b/index.html
@@ -464,7 +464,8 @@
                                     <use href="./images/sprite.svg#icon-vector"></use>
                                 </svg>
                             </span>
-                            Соглашаюсь с рассылкой и принимаю <a class="modal-text">Условия договора</a></label>
+                            Соглашаюсь с рассылкой и принимаю <a class="modal-text">Условия договора</a>
+                        </label>
                     </div>
                 </div>
                 <div class="modal-btn">
