--- a/index.html
+++ b/index.html
@@ -464,7 +464,7 @@
                                     <use href="./images/sprite.svg#icon-vector"></use>
                                 </svg>
                             </span>
-                            Соглашаюсь с рассылкой и принимаю <span class="modal-text">Условия договора</span>
+                            Соглашаюсь с рассылкой и принимаю <a class="modal-text">Условия договора</a>
                         </label>
                     </div>
                 </div>
