hover на checkbox

--- a/index.html
+++ b/index.html
@@ -456,17 +456,16 @@
                         <label for="comment">Коментарий</label>
                         <textarea class="textarea-comment" name="comment" id="comment" placeholder="Введите текст"></textarea>
                     </div>
-                    <div class="modal-checkbox">
-                        <input class="input-checkbox visual-hidden" type="checkbox" name="text" value="text" id="text" />
-                        <label class="label-checkbox" for="text">
-                            <span class="contour-checkbox">
-                                <svg class="check-icon">
-                                    <use href="./images/sprite.svg#icon-vector"></use>
-                                </svg>
-                            </span>
-                            Соглашаюсь с рассылкой и принимаю <a class="modal-text">Условия договора</a>
-                        </label>
-                    </div>
+                    
+                    <input class="input-checkbox visual-hidden" type="checkbox" name="text" value="text" id="text" />
+                    <label class="label-checkbox" for="text">
+                        <span class="contour-checkbox">
+                            <svg class="check-icon">
+                                <use href="./images/sprite.svg#icon-vector"></use>
+                            </svg>
+                        </span>
+                        Соглашаюсь с рассылкой и принимаю <a href="#" class="modal-text">Условия договора</a>
+                    </label>
                 </div>
                 <div class="modal-btn">
                     <button class="hero-button" type="submit">Отправить</button>
