--- a/index.html
+++ b/index.html
@@ -18,15 +18,15 @@
         <div class="container header-container">
             <nav class="header-navigate">
                 <p class="logo">Web<span class="text">Studio</span></p>
-                <ul class="site-nav control">
-                    <li class="site-nav-item"> <a class="site-nav-link link current" href="./index.html"> Студия </a> </li>
-                    <li class="site-nav-item"> <a class="site-nav-link link" href="./portfolio.html"> Портфолио </a> </li>
-                    <li class="site-nav-item"> <a class="site-nav-link link" href=""> Контакты </a> </li>
+                <ul class="site-nav">
+                    <li class="site-nav-item"> <a class="site-nav-link current" href="./index.html"> Студия </a> </li>
+                    <li class="site-nav-item"> <a class="site-nav-link" href="./portfolio.html"> Портфолио </a> </li>
+                    <li class="site-nav-item"> <a class="site-nav-link" href=""> Контакты </a> </li>
                 </ul>
             </nav>
-            <ul class="auth-nav control">
+            <ul class="auth-nav">
                 <li class="auth-nav-item"> 
-                    <a class="nav-link link" href="mailto:info@devstudio.com"> 
+                    <a class="auth-nav-link" href="mailto:info@devstudio.com"> 
                         <svg class="nav-icon nav-icon-envelope">
                             <use href="./images/sprite.svg#icon-envelope"></use>
                         </svg>
@@ -35,7 +35,7 @@
                 </li>
 
                 <li class="auth-nav-item">
-                    <a class="nav-link link" href="tel:+380961111111">
+                    <a class="auth-nav-link" href="tel:+380961111111">
                         <svg class="nav-icon nav-icon-smartphone">
                             <use href="./images/sprite.svg#icon-smartphone"></use>
                         </svg>
@@ -49,7 +49,7 @@
         <!-- Герой -->
         <section class="section section-hero">
             <div class="container">
-                <h1 class="hero-title"> Эффективные решения для вашего бизнеса </h1>
+                <h1 class="hero-headline "> Эффективные решения для вашего бизнеса </h1>
                 <button class="hero-button" type="button" data-modal-open> Заказать услугу </button>
             </div>
         </section>
@@ -58,52 +58,52 @@
             <div class="container">
                 <h2 class="visual-hidden"> Наши преимущества </h2> 
                 <ul class="benefits">
-                    <li class="items-benefits">
-                        <div class="items-cartons-benefits">
-                            <div class="items-cartons">
+                    <li class="benefits-items">
+                        <div class="benefits-card-set">
+                            <div class="card-set">
                                 <svg class="cartons-benefits" width="70"
                                 height="70">
                                     <use href="./images/sprite.svg#icon-antenna"></use>
                                 </svg>
                             </div> 
-                            <h3 class="items-title"> Внимание к деталям </h3>
-                            <p class="items-text"> Идейные соображения, а также начало повседневной работы по формированию позиции. </p>
+                            <h3 class="title-items "> Внимание к деталям </h3>
+                            <p class="text-items"> Идейные соображения, а также начало повседневной работы по формированию позиции. </p>
                         </div>
                     </li>
-                    <li class="items-benefits">
-                        <div class="items-cartons-benefits">
-                            <div class="items-cartons">
+                    <li class="benefits-items">
+                        <div class="benefits-card-set">
+                            <div class="card-set">
                                 <svg class="cartons-benefits" width="70"
                                 height="70">
                                     <use href="./images/sprite.svg#icon-clock"></use>
                                 </svg>
                             </div>
-                        <h3 class="items-title"> Пунктуальность </h3>
-                        <p class="items-text"> Задача организации, в особенности же рамки и место обучения кадров влечет за собой. </p>
+                        <h3 class="title-items "> Пунктуальность </h3>
+                        <p class="text-items"> Задача организации, в особенности же рамки и место обучения кадров влечет за собой. </p>
                         </div>
                     </li>
-                    <li class="items-benefits">
-                        <div class="items-cartons-benefits">
-                            <div class="items-cartons">
+                    <li class="benefits-items">
+                        <div class="benefits-card-set">
+                            <div class="card-set">
                                 <svg class="cartons-benefits" width="70"
                                 height="70">
                                     <use href="./images/sprite.svg#icon-diagram"></use>
                                 </svg>
                             </div>
-                        <h3 class="items-title"> Планирование </h3>
-                        <p class="items-text"> Равным образом консультация с широким активом в значительной степени обуславливает. </p>
+                            <h3 class="ititle-items "> Планирование </h3>
+                            <p class="text-items"> Равным образом консультация с широким активом в значительной степени обуславливает. </p>
                         </div>
                     </li>
-                    <li class="items-benefits">
-                        <div class="items-cartons-benefits">
-                            <div class="items-cartons">
+                    <li class="benefits-items">
+                        <div class="benefits-card-set">
+                            <div class="card-set">
                                 <svg class="cartons-benefits" width="70"
                                 height="70">
                                     <use href="./images/sprite.svg#icon-astronaut"></use>
                                 </svg>
                             </div>
-                            <h3 class="items-title"> Современные технологии </h3>
-                            <p class="items-text"> Значимость этих проблем настолько очевидна, что реализация плановых заданий. </p>
+                            <h3 class="title-items "> Современные технологии </h3>
+                            <p class="text-items"> Значимость этих проблем настолько очевидна, что реализация плановых заданий. </p>
                         </div>
                     </li>
                 </ul>
@@ -133,16 +133,16 @@
         <section class="section section-team">
             <div class="container">
                 <h2 class="headline"> Наша команда </h2>
-                <ul class="list">
+                <ul class="team">
                     <li class="people">
                         <img src="./images1/igor_demianenko.jpg" alt="Игорь Демьяненко" height="260" width="270">
                         <div class="people-item">
-                            <h3 class="people-desc"> Игорь Демьяненко </h3>
-                            <p lang="en" class="people-text"> Product Designer </p>
-                            <div class="people-item-social">
+                            <h3 class="people-name"> Игорь Демьяненко </h3>
+                            <p lang="en" class="people-position"> Product Designer </p>
+                            <div class="social-card">
                                 <ul class="social-list">
                                     <li class="social-item">
-                                        <a class="social-link link" href="">
+                                        <a class="social-link" href="">
                                             <svg class="social-icon" width="20"
                                             height="20">
                                                 <use href="./images/sprite.svg#icon-instagram1"></use>
@@ -150,21 +150,21 @@
                                         </a>
                                     </li>
                                     <li class="social-item">
-                                        <a class="social-link link" href="">
+                                        <a class="social-link" href="">
                                             <svg class="social-icon">
                                                 <use href="./images/sprite.svg#icon-twitter1"></use>
                                             </svg>
                                         </a>
                                     </li>
                                     <li class="social-item">
-                                        <a class="social-link link" href="">
+                                        <a class="social-link" href="">
                                             <svg class="social-icon">
                                                  <use href="./images/sprite.svg#icon-facebook1"></use>
                                             </svg>
                                         </a>
                                     </li>
                                     <li class="social-item">
-                                        <a class="social-link link" href="">
+                                        <a class="social-link" href="">
                                             <svg class="social-icon">
                                                 <use href="./images/sprite.svg#icon-linkedin1"></use>
                                            </svg>
@@ -177,9 +177,9 @@
                     <li class="people">
                         <img src="./images1/olga_repina.jpg" alt="Ольга Репина" height="260" width="270">
                         <div class="people-item">
-                            <h3 class="people-desc"> Ольга Репина </h3>
-                            <p lang="en" class="people-text"> Frontend Developer </p>
-                            <div>
+                            <h3 class="people-name"> Ольга Репина </h3>
+                            <p lang="en" class="people-position"> Frontend Developer </p>
+                            <div class="social-card">
                                 <ul class="social-list">
                                     <li class="social-item">
                                         <a class="social-link link" href="">
@@ -217,9 +217,9 @@
                     <li class="people">
                         <img src="./images1/nikolay_tarasov.jpg" alt="Николай Тарасов" height="260" width="270">
                         <div class="people-item">
-                            <h3 class="people-desc">Николай Тарасов</h3>
-                            <p lang="en" class="people-text">Marketing</p>
-                            <div>
+                            <h3 class="people-name">Николай Тарасов</h3>
+                            <p lang="en" class="people-position">Marketing</p>
+                            <div class="social-card">
                                 <ul class="social-list">
                                     <li class="social-item">
                                         <a class="social-link link" href="">
@@ -257,9 +257,9 @@
                     <li class="people">
                         <img src="./images1/mikhail_yermakov.jpg" alt="Михаил Ермаков" height="260" width="270">
                         <div class="people-item">
-                            <h3 class="people-desc">Михаил Ермаков</h3>
-                            <p lang="en" class="people-text">UI Designer</p>
-                            <div>
+                            <h3 class="people-name">Михаил Ермаков</h3>
+                            <p lang="en" class="people-position">UI Designer</p>
+                            <div class="social-card">
                                 <ul class="social-list">
                                     <li class="social-item">
                                         <a class="social-link link" href="">
@@ -301,44 +301,44 @@
         <section class="section">
             <div class="container">
                 <h2 class="headline">Постоянные клиенты</h2>
-                <ul class="list company-list">
-                    <li class="company">
-                        <a class="company-link link" href="">
+                <ul class="company">
+                    <li class="company-partner">
+                        <a class="company-link" href="">
                             <svg class="company-icon">
                                 <use href="./images/sprite.svg#icon-company0"></use>
                            </svg>
                         </a>
                     </li>
-                    <li class="company">
-                        <a class="company-link link" href="">
+                    <li class="company-partner">
+                        <a class="company-link" href="">
                             <svg class="company-icon">
                                 <use href="./images/sprite.svg#icon-company1"></use>
                            </svg>
                         </a> 
                     </li>
-                    <li class="company">
-                        <a class="company-link link" href="">
+                    <li class="company-partner">
+                        <a class="company-link" href="">
                             <svg class="company-icon">
                                 <use href="./images/sprite.svg#icon-company2"></use>
                            </svg>
                         </a>
                     </li>
-                    <li class="company">
-                        <a class="company-link link" href="">
+                    <li class="company-partner">
+                        <a class="company-link" href="">
                             <svg class="company-icon">
                                 <use href="./images/sprite.svg#icon-company3"></use>
                            </svg>
                         </a>
                     </li>
-                    <li class="company">
-                        <a class="company-link link" href="">
+                    <li class="company-partner">
+                        <a class="company-link" href="">
                             <svg class="company-icon">
                                 <use href="./images/sprite.svg#icon-company4"></use>
                            </svg>
                         </a>
                     </li>
-                    <li class="company">
-                        <a class="company-link link" href="">
+                    <li class="company-partner">
+                        <a class="company-link" href="">
                             <svg class="company-icon">
                                 <use href="./images/sprite.svg#icon-company5"></use>
                            </svg>
@@ -353,25 +353,25 @@
         <div class="container footer-container">
             <div class="footer-address">
                 <p class="logo">Web<span class="text">Studio</span></p>
-                <address>
-                    <ul class="address-auth-nav">
+                <address class="address">
+                    <ul class="address-list">
                         <li class="address-row"> 
-                            <a class="link maps" href="https://www.google.com.ua/maps/place/%D0%B1%D1%83%D0%BB%D1%8C%D0%B2%D0%B0%D1%80+%D0%9B%D0%B5%D1%81%D1%96+%D0%A3%D0%BA%D1%80%D0%B0%D1%97%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D1%97%D0%B2,+02000/@50.4268936,30.5373685,18z"> г. Киев, пр-т Леси Украинки, 26 </a> 
+                            <a class="address-link maps" href="https://www.google.com.ua/maps/place/%D0%B1%D1%83%D0%BB%D1%8C%D0%B2%D0%B0%D1%80+%D0%9B%D0%B5%D1%81%D1%96+%D0%A3%D0%BA%D1%80%D0%B0%D1%97%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D1%97%D0%B2,+02000/@50.4268936,30.5373685,18z"> г. Киев, пр-т Леси Украинки, 26 </a> 
                         </li>
                         <li class="address-row"> 
-                            <a class="link" href="mailto:info@devstudio.com"> info@devstudio.com </a> 
+                            <a class="address-link" href="mailto:info@devstudio.com"> info@devstudio.com </a> 
                         </li>
                         <li class="address-row"> 
-                            <a class="link" href="tel:+380961111111"> +38 096 111-11-11 </a> 
+                            <a class="address-link" href="tel:+380961111111"> +38 096 111-11-11 </a> 
                         </li>
                     </ul>
                 </address>  
             </div>
             <div class="footer-social">
-                <h2 class="footer-headline">присоединяйтесь</h2>
+                <p class="footer-headline"> <strong>присоединяйтесь</strong> </p>
                 <ul class="social-list">
                     <li class="social-item">
-                        <a class="footer-social-link social-link link" href="">
+                        <a class="footer-social-link social-link" href="">
                             <svg class="social-icon" width="20"
                             height="20">
                                 <use href="./images/sprite.svg#icon-instagram1"></use>
@@ -379,21 +379,21 @@
                         </a>
                     </li>
                     <li class="social-item">
-                        <a class="footer-social-link social-link link" href="">
+                        <a class="footer-social-link social-link" href="">
                             <svg class="social-icon">
                                 <use href="./images/sprite.svg#icon-twitter1"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="social-item">
-                        <a class="footer-social-link social-link link" href="">
+                        <a class="footer-social-link social-link" href="">
                             <svg class="social-icon">
                                 <use href="./images/sprite.svg#icon-facebook1"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="social-item">
-                        <a class="footer-social-link social-link link" href="">
+                        <a class="footer-social-link social-link" href="">
                             <svg class="social-icon">
                                 <use href="./images/sprite.svg#icon-linkedin1"></use>
                            </svg>
@@ -401,13 +401,13 @@
                     </li>
                 </ul>
             </div>
-            <div>
+            <div class="footer-online">
                 <p class="footer-headline"> <strong>Подпишитесь на рассылку</strong> </p>
-                <form class="form-online">
-                    <input class="online-input" type="email" name="user-mail" placeholder="E-mail">
-                    <button type="submit" class="hero-button online-btn">
+                <form class="footer-online-form">
+                    <input class="footer-online-input" type="email" name="user-mail" placeholder="E-mail">
+                    <button type="submit" class="hero-button footer-online-btn">
                         Подписаться
-                        <svg class="online-btn-icon">
+                        <svg class="footer-btn-icon">
                             <use href="./images/sprite.svg#icon-send"></use>
                         </svg>
                     </button>
