--- a/portfolio.html
+++ b/portfolio.html
@@ -19,14 +19,14 @@
             <nav class="header-navigate">
                 <p class="logo">Web<span class="text">Studio</span></p>
                 <ul class="site-nav control">
-                    <li class="site-nav-item"> <a class="link" href="./index.html"> Студия </a> </li>
-                    <li class="site-nav-item"> <a class="link current" href="./portfolio.html"> Портфолио </a> </li>
-                    <li class="site-nav-item"> <a class="link" href=""> Контакты </a> </li>
+                    <li class="site-nav-item"> <a class="site-nav-link" href="./index.html"> Студия </a> </li>
+                    <li class="site-nav-item"> <a class="site-nav-link current" href="./portfolio.html"> Портфолио </a> </li>
+                    <li class="site-nav-item"> <a class="site-nav-link" href=""> Контакты </a> </li>
                 </ul>
             </nav>
             <ul class="auth-nav control">
                 <li class="auth-nav-item"> 
-                    <a class="nav-link link" href="mailto:info@devstudio.com"> 
+                    <a class="auth-nav-link" href="mailto:info@devstudio.com"> 
                         <svg class="nav-icon nav-icon-envelope">
                             <use href="./images/sprite.svg#icon-envelope"></use>
                         </svg>
@@ -35,7 +35,7 @@
                 </li>
 
                 <li class="auth-nav-item">
-                    <a class="nav-link link" href="tel:+380961111111">
+                    <a class="auth-nav-link" href="tel:+380961111111">
                         <svg class="nav-icon nav-icon-smartphone">
                             <use href="./images/sprite.svg#icon-smartphone"></use>
                         </svg>
@@ -58,7 +58,6 @@
                 </ul>
                 <h2 class="visual-hidden">Навигация</h2>
                 <ul class="activities">
-
                     <li class="activities-cards">
                         <a class="link-item" href="">
                             <div class="activities-list">
@@ -193,14 +192,14 @@
         <div class="container footer-container">
             <div class="footer-address">
                 <p class="logo">Web<span class="text">Studio</span></p>
-                <address>
-                    <ul class="address-auth-nav">
+                <address class="address">
+                    <ul class="address-list">
                         <li class="address-row"> 
-                            <a class="link maps" href="https://www.google.com.ua/maps/place/%D0%B1%D1%83%D0%BB%D1%8C%D0%B2%D0%B0%D1%80+%D0%9B%D0%B5%D1%81%D1%96+%D0%A3%D0%BA%D1%80%D0%B0%D1%97%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D1%97%D0%B2,+02000/@50.4268936,30.5373685,18z"> г. Киев, пр-т Леси Украинки, 26 </a> </li>
+                            <a class="address-link maps" href="https://www.google.com.ua/maps/place/%D0%B1%D1%83%D0%BB%D1%8C%D0%B2%D0%B0%D1%80+%D0%9B%D0%B5%D1%81%D1%96+%D0%A3%D0%BA%D1%80%D0%B0%D1%97%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D1%97%D0%B2,+02000/@50.4268936,30.5373685,18z"> г. Киев, пр-т Леси Украинки, 26 </a> </li>
                         <li class="address-row"> 
-                            <a class="link" href="mailto:info@devstudio.com"> info@devstudio.com </a> </li>
+                            <a class="address-link" href="mailto:info@devstudio.com"> info@devstudio.com </a> </li>
                         <li class="address-row"> 
-                            <a class="link" href="tel:+380961111111"> +38 096 111-11-11 </a> </li>
+                            <a class="address-link" href="tel:+380961111111"> +38 096 111-11-11 </a> </li>
                     </ul>
                 </address>  
             </div>
@@ -208,7 +207,7 @@
                 <h3 class="footer-headline">присоединяйтесь</h3>
                 <ul class="social-list">
                     <li class="social-item">
-                        <a class="footer-social-link social-link link" href="">
+                        <a class="footer-social-link social-link" href="">
                             <svg class="social-icon" width="20"
                             height="20">
                                 <use href="./images/sprite.svg#icon-instagram1"></use>
@@ -216,21 +215,21 @@
                         </a>
                     </li>
                     <li class="social-item">
-                        <a class="footer-social-link social-link link" href="">
+                        <a class="footer-social-link social-link" href="">
                             <svg class="social-icon">
                                 <use href="./images/sprite.svg#icon-twitter1"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="social-item">
-                        <a class="footer-social-link social-link link" href="">
+                        <a class="footer-social-link social-link" href="">
                             <svg class="social-icon">
                                 <use href="./images/sprite.svg#icon-facebook1"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="social-item">
-                        <a class="footer-social-link social-link link" href="">
+                        <a class="footer-social-link social-link" href="">
                             <svg class="social-icon">
                                 <use href="./images/sprite.svg#icon-linkedin1"></use>
                            </svg>
@@ -238,13 +237,13 @@
                     </li>
                 </ul>
             </div>
-            <div>
+            <div class="footer-online">
                 <p class="footer-headline"> <strong>Подпишитесь на рассылку</strong> </p>
-                <form class="form-online">
-                    <input class="online-input" type="email" name="user-mail" id="user-mail" placeholder="E-mail">
-                    <button type="submit" class="hero-button online-btn">
+                <form class="footer-online-form">
+                    <input class="footer-online-input" type="email" name="user-mail" id="user-mail" placeholder="E-mail">
+                    <button type="submit" class="hero-button footer-online-btn">
                         Подписаться
-                        <svg class="online-btn-icon">
+                        <svg class="footer-btn-icon">
                             <use href="./images/sprite.svg#icon-send"></use>
                         </svg>
                     </button>
